--- a/css/all.css
+++ b/css/all.css
@@ -252,29 +252,29 @@ header {
             right: -30px;
             top: 28px; }
 
-.banner {
+.info {
   width: 100%;
   text-align: center;
   position: relative;
   background: url("../images/banner-2.png") no-repeat;
   background-size: cover;
   box-sizing: border-box; }
-  .banner .info-banner {
+  .info .info-banner {
     padding-top: 100px;
     padding-bottom: 219px; }
-    .banner .info-banner h3 {
+    .info .info-banner h3 {
       font-family: 'Roboto-Black';
       font-size: 30px;
       color: #fff;
       text-transform: uppercase;
       padding-bottom: 20px; }
-    .banner .info-banner p {
+    .info .info-banner p {
       font-family: "Roboto-Thin";
       color: #fff;
       text-transform: uppercase;
       font-size: 40px;
       padding-bottom: 33px; }
-    .banner .info-banner span {
+    .info .info-banner span {
       display: block;
       box-sizing: border-box;
       text-transform: uppercase;
@@ -697,16 +697,9 @@ footer {
   header .main-header nav ul {
     padding: 0; }
 
-  .banner .info-banner h3 {
-    font-size: 20px;
-    padding-bottom: 0; }
-
-  .banner .info-banner p {
-    font-size: 30px; }
-
-  .banner .info-banner span {
-    font-size: 20px; }
-
+  /* .banner .info-banner h3{ font-size: 20px; padding-bottom: 0;} */
+  /* .banner .info-banner p{ font-size: 30px;}
+  .banner .info-banner span{ font-size: 20px;} */
   .slider .sl-slide .sl-text h3 {
     font-size: 10px;
     line-height: 14px; }
