--- a/scss/all.scss
+++ b/scss/all.scss
@@ -176,7 +176,7 @@ header                            		 	 	    { background:#f9fbfe; width: 100%; m
 		
 	}	
 }
-.banner                                         { width: 100%; text-align: center; position: relative; background: url('../images/banner-2.png') no-repeat; background-size:cover; box-sizing: border-box;
+.info                                           { width: 100%; text-align: center; position: relative; background: url('../images/banner-2.png') no-repeat; background-size:cover; box-sizing: border-box;
 	.info-banner                                {  padding-top: 100px; padding-bottom: 219px;
 		h3                                      { font-family:'Roboto-Black'; font-size: 30px; color: $color-white; text-transform: uppercase; padding-bottom: 20px;}
 	    p                                       { font-family:'Roboto-Thin' ; color:$color-white; text-transform: uppercase; font-size: 40px; padding-bottom: 33px; }
@@ -332,9 +332,9 @@ footer                                          { position: relative; width: 100
 form button{ font-size: 12px;}
 header .main-header nav ul li a{ padding: 10px 5px;}
 header .main-header nav ul { padding: 0;}
-.banner .info-banner h3{ font-size: 20px; padding-bottom: 0;}
-.banner .info-banner p{ font-size: 30px;}
-.banner .info-banner span{ font-size: 20px;}
+/* .banner .info-banner h3{ font-size: 20px; padding-bottom: 0;} */
+/* .banner .info-banner p{ font-size: 30px;}
+.banner .info-banner span{ font-size: 20px;} */
 .slider .sl-slide .sl-text h3{ font-size: 10px;line-height: 14px;}
 
 .slider .sl-slide .sl-text p{ font-size:8px; line-height: 10px;}
