max-widh chenge on width in section slider

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -209,7 +209,7 @@ header                            		 	 	    { background:#f9fbfe; width: 100%; m
 		.banner                                 { position: absolute; top: 20%; left: 15%;
 			img                                 { max-width: 500px;}
 			.img-banner2                        { width: 400px; position: absolute; top: -55px; left:5%;}
-			.img-banner3                        { max-width: 500px; top: -90px; left:5%; position: absolute;} 
+			.img-banner3                        { width: 450px; top: -90px; left:5%; position: absolute;} 
 		}
 	}
 	.controllers                                {
